# astrix

./: .buildinfo  .gitignore  LICENSE  README.html  README.md  astrix.constants.html  astrix.functs.html  astrix.generic.html  astrix.html  astrix.post.analysis.html  astrix.post.html  astrix.primitives.html  astrix.project.html  astrix.spatial.frame.html  astrix.spatial.html  astrix.spatial.location.html  astrix.spatial.ray.html  astrix.spatial.rotation.html  astrix.time.html  astrix.utils.html  examples.html  genindex.html  getting_started.html  index.html  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: codecov.yml
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/astrix/: _backend_utils.html  functs.html  generic.html  planning.html  primitives.html  project.html  time.html  utils.html
_modules/astrix/plots/: cartplot.html  plot3d.html
_modules/astrix/post/: analysis.html
_modules/astrix/spatial/: frame.html  location.html  ray.html  rotation.html
_modules/scipy/spatial/transform/: _rotation.html
_sources/: astrix.post.rst.txt  astrix.primitives.rst.txt  astrix.rst.txt  examples.rst.txt  getting_started.md.txt  index.rst.txt
_sources/api/: astrix.constants.rst.txt  astrix.functs.rst.txt  astrix.generic.rst.txt  astrix.planning.rst.txt  astrix.plots.cartplot.rst.txt  astrix.plots.plot3d.rst.txt  astrix.plots.rst.txt  astrix.post.analysis.rst.txt  astrix.project.rst.txt  astrix.rst.txt  astrix.spatial.frame.rst.txt  astrix.spatial.location.rst.txt  astrix.spatial.ray.rst.txt  astrix.spatial.rotation.rst.txt  astrix.spatial.rst.txt  astrix.time.rst.txt  astrix.utils.rst.txt  index.rst.txt  modules.rst.txt
_sources/examples/: example_1.md.txt
api/: astrix.constants.html  astrix.functs.html  astrix.generic.html  astrix.html  astrix.planning.html  astrix.plots.cartplot.html  astrix.plots.html  astrix.plots.plot3d.html  astrix.post.analysis.html  astrix.post.html  astrix.project.html  astrix.spatial.frame.html  astrix.spatial.html  astrix.spatial.location.html  astrix.spatial.ray.html  astrix.spatial.rotation.html  astrix.time.html  astrix.utils.html  index.html  modules.html
docs/: Makefile  conf.py  generate_docs.py  index.rst
docs/img/: banner.png:Zone.Identifier
examples/: example_1.html
src/: __init__.py
src/astrix/: __init__.py  _backend_utils.py  constants.py  functs.py  generic.py  planning.py  primatives.py  primitives.py  project.py  time.py  types.py  utils.py
src/astrix/plots/: __init__.py  cartplot.py  plot3d.py
src/astrix/post/: analysis.py
src/astrix/spatial/: __init__.py  frame.py  location.py  ray.py  rotation.py
src/submodule/: test_module.py
tests/: conftest.py  test_backend.py  test_primatives.py  test_utils.py
tests/core/: helpers.py  test_backend.py  test_frame.py  test_functs.py  test_import.py  test_path.py  test_point.py  test_primatives.py  test_projection.py  test_ray.py  test_time.py  test_utils.py
tests/jax/: __init__.py  conftest.py  test_frame.py  test_import.py  test_jit_grad.py  test_path.py
