[build-system]
requires = ["setuptools>=70", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "astrix"
version = "0.1"
description = "AsTrIX — Aerospace Trajectory Imaging & Diagnostics toolbox"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Andrew Lock" }]
keywords = ["trajectory", "imaging", "triangulation", "state-estimation"]
# Keep this list small; put heavy/optional deps in extras.
dependencies = [
"numpy>=1.26",
"scipy>=1.11",
"matplotlib",
"numpy",
"pandas",
"scipy>=1.15.3",
"pyproj",
"lxml",
"sgp4",
"astropy>=6.1",
"pykml",
"cartopy",
"basemap",
"sphinx>=4.0.0",
"sphinx-rtd-theme>=0.5.2",
"myst-parser>=0.15.1",
"sphinx-autodoc-typehints>=3.0.0",
"array-api-compat",
]

# Runtime/optional feature buckets (install with: pip install .[viz,estimation])
[project.optional-dependencies]
jax = ["jax>=0.6.1", "jaxlib>=0.6.1"]


# CLI entry points (safe even without package code yet)
[project.scripts]

[tool.setuptools-scm]


# If you plan a src/ layout later, this keeps installs sane even without code yet
[tool.setuptools]
package-dir = {"" = "src"}
