[build-system]
requires = ["setuptools>=70", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "astrix"
version = "0.1"
description = "AsTrIX — Aerospace Trajectory Imaging & Diagnostics toolbox"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Andrew Lock" }]
keywords = ["aerospace", "reconstruction", "imaging", "state-estimation"]
# Keep this list small; put heavy/optional deps in extras.
dependencies = [
    "numpy>=1.26",
    "numpy",
    "pandas",
    "pyproj",
    "lxml",
    "sgp4",
    "astropy>=6.1",
    "pykml",
    "array-api-compat",
    "scipy>=1.17.0.dev0",
    "scipy-stubs>=1.16.2.0",
]

# Runtime/optional feature buckets (install with: pip install .[viz,estimation])

[project.optional-dependencies]
jax = ["jax[cpu]>=0.6.1"]
plot = ["basemap", "basemap-data-hires", "cartopy", "matplotlib"]

[dependency-groups]
dev = ["pytest", "pytest-cov>=7.0.0", "jax[cpu]", "cartopy", "matplotlib", "basemap", "basemap-data-hires"]
test = ["pytest", "pytest-cov>=7.0.0"]
docs = [
    "sphinx>=4.0.0",
    "myst-parser>=0.15.1",
    "sphinx-autodoc-typehints>=3.0.0",
    "sphinx-gallery",
    "sphinx-autobuild",
    "furo>=2025.7.19",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.uv.sources]
scipy = { index = "scipy-nightly" }    # <-- only SciPy comes from the nightly index

[[tool.uv.index]]
name = "scipy-nightly"
url = "https://pypi.anaconda.org/scientific-python-nightly-wheels/simple"
explicit = true

# CLI entry points (safe even without package code yet)
[project.scripts]

[tool.setuptools-scm]

[tool.ruff.format]
docstring-code-format = true  # Formats code in docstrings

# If you plan a src/ layout later, this keeps installs sane even without code yet
[tool.setuptools]
package-dir = {"" = "src"}
